--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "mocha": "^3.4.2",
     "workshopper-adventure": "^6.0.2",
-    "workshopper-exercise": "^3.0.1"
+    "workshopper-boilerplate": "^1.1.2",
+    "workshopper-exercise": "^3.0.1",
+    "workshopper-wrappedexec": "^0.1.3"
   }
 }
